--- a/presentation/src/main/res/navigation/nav_graph.xml
+++ b/presentation/src/main/res/navigation/nav_graph.xml
@@ -22,6 +22,7 @@
         <action
             android:id="@+id/action_cardsFragment_to_cardRepeatFragment"
             app:destination="@id/cardRepeatFragment" />
+
     </fragment>
     <fragment
         android:id="@+id/cardRepeatFragment"
@@ -30,6 +31,9 @@
         <action
             android:id="@+id/action_cardRepeatFragment_to_settingFragment"
             app:destination="@id/settingFragment" />
+        <argument
+            android:name="groupId"
+            app:argType="long" />
     </fragment>
     <fragment
         android:id="@+id/settingFragment"
@@ -38,7 +42,7 @@
     <dialog
         android:id="@+id/newCardDialogFragment"
         android:name="com.example.ruen.views.NewCardFragment"
-        android:label="@string/new_card" >
+        android:label="@string/new_card">
         <argument
             android:name="groupId"
             app:argType="long" />
@@ -59,7 +63,10 @@
             app:destination="@id/cardsFragment" />
         <action
             android:id="@+id/action_groupsFragment_to_cardRepeatFragment"
-            app:destination="@id/cardRepeatFragment">
+            app:destination="@id/cardRepeatFragment" >
+            <argument
+                android:name="groupId"
+                android:defaultValue="-1L" />
         </action>
         <action
             android:id="@+id/action_groupsFragment_to_newGroupDialogFragment"
