--- a/presentation/src/main/res/layout/fragment_groups.xml
+++ b/presentation/src/main/res/layout/fragment_groups.xml
@@ -10,7 +10,7 @@
         android:id="@+id/groupsView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@id/backPanel"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:elevation="5dp"
+        android:elevation="4dp"
         android:padding="10dp"
         android:text="Начать повторение"
         android:textAppearance="@style/ButtonTextAppearance"
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:background="@drawable/rounded_rect_background"
+        android:background="?colorBackgroundBottomAppBar"
         android:padding="5dp"
         android:src="@drawable/create_folder"
         android:stateListAnimator="@animator/button_animator"
