--- a/presentation/src/main/res/layout/cards_item.xml
+++ b/presentation/src/main/res/layout/cards_item.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="7dp"
+    android:background="@drawable/rect_round_all_corners_background"
     android:padding="@dimen/cards_item_margin">
 
     <TextView
@@ -12,7 +14,8 @@
         android:ellipsize="end"
         android:fontFamily="@font/roboto_medium"
         android:maxLines="1"
-        android:textColor="@color/black"
+        android:paddingHorizontal="10dp"
+        android:textColor="?colorOnSurface"
         android:textSize="@dimen/cards_item_text_size"
         tools:text="size" />
 </FrameLayout>
