--- a/presentation/src/main/res/values/attrs.xml
+++ b/presentation/src/main/res/values/attrs.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <attr name="backgroundPanelColor" format="color" />
+    <attr name="colorBackgroundToolbar" format="color" />
+    <attr name="colorOnToolbar" format="color" />
+    <attr name="colorBackgroundBottomAppBar" format="color" />
+    <attr name="colorOnBottomAppBar" format="color" />
 </resources>
