--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -7,11 +7,19 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue_100">#F4FBFF</color>
-    <color name="blue_300">#B8EAFF</color>
+    <color name="cornflower_200">#B7CDEE</color>
+    <color name="blue_100">#EEF9FF</color>
+    <color name="blue_300">#A8DEFC</color>
     <color name="blue_500">#0F8BC9</color>
     <color name="blue_700">#3A7EAF</color>
+    <color name="blue_800">#005A8D</color>
+    <color name="blue_900">#004972</color>
+    <color name="blue_gray_400">#76acc9</color>
     <color name="blue_gray_200">#A7C4D9</color>
-    <color name="green_500">#4A9C5C</color>
+    <color name="gray_200">#cccccc</color>
+    <color name="green_400">#7FC98F</color>
     <color name="red_300">#F83C2E</color>
+
+
+
 </resources>
