--- a/presentation/src/main/res/values/themes.xml
+++ b/presentation/src/main/res/values/themes.xml
@@ -3,18 +3,53 @@
     <style name="Theme.Ruen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blue_300</item>
-        <item name="colorPrimaryVariant">#3F94B6</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/gray_200</item>
+        <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">#216962</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/blue_700</item>
+        <item name="colorSecondaryVariant">@color/blue_gray_400</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSurface">@color/blue_100</item>
+        // toolbar
+        <item name="colorBackgroundToolbar">@color/white</item>
+        <item name="colorOnToolbar">@color/black</item>
+        // appbar
+        <item name="colorBackgroundBottomAppBar">@color/blue_100</item>
+        <item name="colorOnBottomAppBar">@color/black</item>
+
         <item name="fontFamily">@font/roboto</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorOnPrimary</item>
+        <item name="android:statusBarColor">@color/white</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
         <!-- Customize your theme here. -->
-        <item name="backgroundPanelColor">#F4F4F4</item>
+        <item name="backgroundPanelColor">@color/cornflower_200</item>
+    </style>
+
+
+    <style name="Theme.Ruen.Cornflower" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/blue_300</item>
+        <item name="colorPrimaryVariant">@color/gray_200</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/blue_700</item>
+        <item name="colorSecondaryVariant">@color/blue_gray_400</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSurface">@color/white</item>
+        <item name="android:windowBackground">@color/cornflower_200</item>
+        // toolbar
+        <item name="colorBackgroundToolbar">@color/white</item>
+        <item name="colorOnToolbar">@color/black</item>
+        // appbar
+        <item name="colorBackgroundBottomAppBar">@color/white</item>
+        <item name="colorOnBottomAppBar">@color/black</item>
+
+        <item name="fontFamily">@font/roboto</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <!-- Customize your theme here. -->
+        <item name="backgroundPanelColor">@color/cornflower_200</item>
     </style>
 
 </resources>
