--- a/presentation/src/main/res/layout/fragment_card_repeat.xml
+++ b/presentation/src/main/res/layout/fragment_card_repeat.xml
@@ -11,9 +11,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_margin="40dp"
+        android:layout_margin="@dimen/repeatCard_margin"
         android:background="@drawable/rect_round_all_corners_background"
-        android:padding="30dp"
+        android:padding="@dimen/repeatCard_padding"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,8 +23,8 @@
         android:id="@+id/mainSide"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:text="Основная сторона"
+        android:layout_margin="@dimen/cardRepeat_hintSide_margin"
+        android:text="@string/main_side"
         app:layout_constraintEnd_toEndOf="@id/cardView"
         app:layout_constraintStart_toStartOf="@id/cardView"
         app:layout_constraintTop_toTopOf="@id/cardView" />
@@ -33,9 +33,9 @@
         android:id="@+id/otherSide"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
+        android:layout_margin="@dimen/cardRepeat_hintSide_margin"
         android:gravity="end"
-        android:text="Обратная сторона"
+        android:text="@string/reverse_side"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@id/cardView"
         app:layout_constraintStart_toStartOf="@id/cardView"
@@ -55,7 +55,7 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:textColor="?colorOnSurface"
-        android:textSize="24sp"
+        android:textSize="@dimen/repeatCard_textSize"
         app:layout_constraintBottom_toBottomOf="@id/cardView"
         app:layout_constraintEnd_toEndOf="@id/cardView"
         app:layout_constraintStart_toStartOf="@id/cardView"
@@ -69,7 +69,7 @@
         android:layout_height="0dp"
         android:gravity="center"
         android:textColor="?colorOnSurface"
-        android:textSize="24sp"
+        android:textSize="@dimen/repeatCard_textSize"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/cardView"
         app:layout_constraintEnd_toEndOf="@id/cardView"
@@ -81,12 +81,11 @@
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="@dimen/repeatCard_arrow_marginBottom"
         android:scaleType="centerCrop"
         android:src="@drawable/arrow"
         app:layout_constraintBottom_toTopOf="@+id/bad_know_view"
         app:layout_constraintEnd_toEndOf="@id/cardView"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/cardView"
         tools:ignore="ContentDescription" />
 
@@ -94,7 +93,7 @@
         android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="-10dp"
+        android:layout_marginTop="@dimen/bottomPanel_marginTop"
         android:background="@drawable/rect_round_all_corners_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,11 +102,12 @@
 
     <Button
         android:id="@+id/dont_know_view"
-        android:layout_width="120dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="5dp"
-        android:text="Не помню"
+        android:layout_marginEnd="@dimen/repeatCard_knowButton_marginEnd"
+        android:layout_marginBottom="@dimen/repeatCard_knowButton_marginBottom"
+        android:minWidth="@dimen/repeatCard_knowButton_minWidth"
+        android:text="@string/dont_know"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/bad_know_view"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -115,19 +115,21 @@
 
     <Button
         android:id="@+id/bad_know_view"
-        android:layout_width="120dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="9dp"
-        android:text="Плохо"
+        android:layout_marginEnd="@dimen/repeatCard_knowButton_marginEnd"
+        android:minWidth="@dimen/repeatCard_knowButton_minWidth"
+        android:text="@string/bad_know"
         app:layout_constraintBottom_toBottomOf="@id/dont_know_view"
         app:layout_constraintEnd_toStartOf="@+id/good_know_view"
         app:layout_constraintStart_toEndOf="@+id/dont_know_view" />
 
     <Button
         android:id="@+id/good_know_view"
-        android:layout_width="120dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Помню"
+        android:minWidth="@dimen/repeatCard_knowButton_minWidth"
+        android:text="@string/good_know"
         app:layout_constraintBottom_toBottomOf="@id/dont_know_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/bad_know_view" />
@@ -138,11 +140,11 @@
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:background="?colorBackgroundToolbar"
-        android:elevation="8dp"
+        android:elevation="@dimen/repeatCard_noCardView_elevation"
         android:gravity="center"
-        android:text="Нет карточек для повторения"
+        android:text="@string/no_cards_to_repeat"
         android:textColor="?colorOnToolbar"
-        android:textSize="34sp"
+        android:textSize="@dimen/repeatCard_noCardView_textSize"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
