--- a/presentation/src/main/res/layout/fragment_groups.xml
+++ b/presentation/src/main/res/layout/fragment_groups.xml
@@ -10,7 +10,7 @@
         android:id="@+id/groupsView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/rv_marginTop"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@id/backPanel"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +23,7 @@
         android:id="@+id/backPanel"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="-10dp"
+        android:layout_marginTop="@dimen/bottomPanel_marginTop"
         android:background="@drawable/rect_round_up_corners_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,14 +34,13 @@
         android:id="@+id/startRepeatingView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:elevation="4dp"
-        android:padding="10dp"
-        android:text="Начать повторение"
+        android:layout_margin="@dimen/bottomPanel_startRepeatButton_margin"
+        android:elevation="@dimen/standart_elevation"
+        android:padding="@dimen/bottomPanel_startRepeatButton_padding"
+        android:text="@string/start_repeating"
         android:textAppearance="@style/ButtonTextAppearance"
         android:textColor="@color/black"
-        android:textFontWeight="600"
-        app:cornerRadius="10dp"
+        app:cornerRadius="@dimen/bottomPanel_startRepeatButton_cornerRadius"
         app:icon="@drawable/circular_arrows"
         app:iconTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -51,9 +50,9 @@
         android:id="@+id/createGroupView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_margin="@dimen/bottomPanel_create_margin"
         android:background="?colorBackgroundBottomAppBar"
-        android:padding="5dp"
+        android:padding="@dimen/bottomPanel_create_padding"
         android:src="@drawable/create_folder"
         android:stateListAnimator="@animator/button_animator"
         app:layout_constraintBottom_toBottomOf="@id/startRepeatingView"
