--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
         android:layout_height="wrap_content"
         android:background="?colorBackgroundToolbar"
         app:titleTextColor="?attr/colorOnToolbar"
-        android:elevation="4dp"
-        android:paddingTop="30dp"
+        android:elevation="@dimen/standart_elevation"
+        android:paddingTop="@dimen/toolbar_paddingTop"
         android:theme="@style/ToolBar"
         app:titleTextAppearance="@style/ToolBar.TitleTextAppearance"
          />
