--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -1,7 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="translate_view_text_size">20sp</dimen>
-    <dimen name="translate_view_margin_top">10dp</dimen>
-    <dimen name="cards_item_text_size">20sp</dimen>
-    <dimen name="cards_item_margin">10dp</dimen>
+    <dimen name="translateView_textSize">20sp</dimen>
+    <dimen name="translateView_marginTop">10dp</dimen>
+    <dimen name="cardsItem_textSize">20sp</dimen>
+    <dimen name="rvItem_padding">10dp</dimen>
+    <dimen name="standart_elevation">4dp</dimen>
+    <dimen name="toolbar_paddingTop">30dp</dimen>
+    <dimen name="rvItem_margin">7dp</dimen>
+    <dimen name="rvItem_textView_paddingHorizontal">10dp</dimen>
+    <dimen name="repeatCard_margin">40dp</dimen>
+    <dimen name="repeatCard_padding">30dp</dimen>
+    <dimen name="cardRepeat_hintSide_margin">15dp</dimen>
+    <dimen name="repeatCard_textSize">24sp</dimen>
+    <dimen name="repeatCard_arrow_marginBottom">64dp</dimen>
+    <dimen name="bottomPanel_marginTop">-10dp</dimen>
+    <dimen name="repeatCard_knowButton_marginBottom">5dp</dimen>
+    <dimen name="repeatCard_knowButton_marginEnd">10dp</dimen>
+    <dimen name="repeatCard_knowButton_width">120dp</dimen>
+    <dimen name="repeatCard_knowButton_minWidth">120dp</dimen>
+    <dimen name="repeatCard_noCardView_elevation">8dp</dimen>
+    <dimen name="repeatCard_noCardView_textSize">34sp</dimen>
+    <dimen name="rv_marginTop">20dp</dimen>
+    <dimen name="bottomPanel_startRepeatButton_margin">10dp</dimen>
+    <dimen name="bottomPanel_startRepeatButton_padding">10dp</dimen>
+    <dimen name="bottomPanel_startRepeatButton_cornerRadius">10dp</dimen>
+    <dimen name="bottomPanel_create_margin">20dp</dimen>
+    <dimen name="bottomPanel_create_padding">5dp</dimen>
+    <dimen name="bottomSheet_editText_marginHorizontal">10dp</dimen>
+    <dimen name="newCard_mainSide_marginTop">60dp</dimen>
+    <dimen name="newCard_mainSide_marginBottom">40dp</dimen>
+    <dimen name="bottomSheet_editText_padding">7dp</dimen>
+    <dimen name="bottomSheet_editText_textSize">22sp</dimen>
+    <dimen name="newCard_reverseSize_marginBottom">20dp</dimen>
+    <dimen name="newCard_chipGroup_marginHorizontal">40dp</dimen>
+    <dimen name="newCard_chipGroup_marginBottom">60dp</dimen>
+    <dimen name="bottomSheet_saveButton_marginEnd">24dp</dimen>
+    <dimen name="bottomSheet_saveButton_padding">10dp</dimen>
+    <dimen name="bottomSheet_saveButton_corner_radius">5dp</dimen>
+    <dimen name="newGroup_editText_marginTop">20dp</dimen>
+    <dimen name="bottomSheet_saveButton_marginVertical">20dp</dimen>
 </resources>
