--- a/presentation/src/main/res/navigation/nav_graph.xml
+++ b/presentation/src/main/res/navigation/nav_graph.xml
@@ -27,7 +27,7 @@
     <fragment
         android:id="@+id/cardRepeatFragment"
         android:name="com.example.ruen.views.CardRepeatFragment"
-        android:label="@string/repeating">
+        android:label="@string/repeat">
         <action
             android:id="@+id/action_cardRepeatFragment_to_settingFragment"
             app:destination="@id/settingFragment"/>
