--- a/presentation/src/main/res/layout/fragment_card_repeat.xml
+++ b/presentation/src/main/res/layout/fragment_card_repeat.xml
@@ -14,7 +14,7 @@
         android:layout_margin="@dimen/repeatCard_margin"
         android:background="@drawable/rect_round_all_corners_background"
         android:padding="@dimen/repeatCard_padding"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,7 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="mainSide,otherSide" />
+        app:constraint_referenced_ids="mainSide,otherSide"
+        tools:layout_editor_absoluteY="74dp" />
 
     <TextView
         android:id="@+id/wordView"
@@ -56,7 +57,7 @@
         android:gravity="center"
         android:textColor="?colorOnSurface"
         android:textSize="@dimen/repeatCard_textSize"
-        app:layout_constraintBottom_toBottomOf="@id/cardView"
+        app:layout_constraintBottom_toBottomOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="@id/cardView"
         app:layout_constraintStart_toStartOf="@id/cardView"
         app:layout_constraintTop_toBottomOf="@id/sideBarrier"
@@ -76,18 +77,6 @@
         app:layout_constraintStart_toStartOf="@id/cardView"
         app:layout_constraintTop_toBottomOf="@id/sideBarrier"
         tools:text="Text second" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/repeatCard_arrow_marginBottom"
-        android:scaleType="centerCrop"
-        android:src="@drawable/arrow"
-        app:layout_constraintBottom_toTopOf="@+id/bad_know_view"
-        app:layout_constraintEnd_toEndOf="@id/cardView"
-        app:layout_constraintStart_toStartOf="@id/cardView"
-        tools:ignore="ContentDescription" />
 
     <View
         android:id="@+id/view"
