--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <color name="gray_200">#cccccc</color>
     <color name="green_400">#7FC98F</color>
     <color name="red_300">#F83C2E</color>
-
+    <color name="red_pink_700">#C63D33</color>
 
 
 </resources>
